Fixing gap under border-radius

--- a/src/dashboard/sections/Alerts/AlertBadge/AlertActionButtons/styles.css
+++ b/src/dashboard/sections/Alerts/AlertBadge/AlertActionButtons/styles.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   flex: 1;
   justify-content: center;
+  margin-left: -7px;
 }
 
 .actionButton-outer div {
@@ -26,4 +27,9 @@
   text-transform: uppercase;
   text-align: center;
   width: 100%;
+}
+
+.alertBadge-hoverContainer :first-child {
+  z-index: 1;
+  margin-left: 0;
 }
